--- a/app/src/main/res/layout/activity_numlist.xml
+++ b/app/src/main/res/layout/activity_numlist.xml
@@ -43,12 +43,16 @@
           android:onClick="list_submit"
           />
    </LinearLayout>
-   <androidx.recyclerview.widget.RecyclerView
+   <EditText
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="0.06"
+       />
+   <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
-       android:layout_weight="0.94"
-       android:scrollbars="vertical"
+       android:layout_weight="0.88"
       />
    </LinearLayout>
 </layout>
