--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,17 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:onClick="choosehp"
-            android:text="연락처 가져오기" />
+<!--        <Button-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:onClick="choosehp"-->
+<!--            android:text="연락처 가져오기" />-->
+        <WebView
+            android:id="@+id/mwebview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
 
 
     </FrameLayout>
