--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -7,13 +7,15 @@
     android:weightSum="1"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_layout"
-    android:background="#fff"
+    android:background="@drawable/boder_round"
+    android:padding="10dp"
     >
 
     <TextView
+        android:id="@+id/tv_type"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.3"
+        android:layout_weight="0.25"
         android:text="발신 중..."
         android:gravity="left|center_vertical"
         android:textSize="13dp"
@@ -21,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.7"
+        android:layout_weight="0.75"
         android:weightSum="1"
         android:orientation="horizontal"
         >
@@ -44,24 +46,27 @@
         android:weightSum="1"
         >
         <TextView
-            android:id="@+id/downtv"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
             android:textSize="14dp"
             android:textStyle="bold"
             android:textColor="#000"
-            android:gravity="left"
+            android:gravity="bottom"
+            android:text="나성실 부장"
+
             />
         <TextView
-            android:id="@+id/uptv"
+            android:id="@+id/tv_number"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.5"
             android:textColor="#000"
             android:textSize="12dp"
             android:textStyle="bold"
-            android:gravity="left"
+            android:gravity="top"
+            android:text="010-1234-1234"
             />
         </LinearLayout>
 
