--- a/app/src/main/res/layout/dialog_alarm.xml
+++ b/app/src/main/res/layout/dialog_alarm.xml
@@ -2,7 +2,7 @@
 
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="125dp"
     android:orientation="vertical"
     android:weightSum="1"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,16 +27,17 @@
             android:textSize="17dp"
             android:paddingLeft="25dp"
             />
-        <ImageView
 
+        <ImageView
+            android:id="@+id/bt_close"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
             android:src="@drawable/ic_close"
             android:onClick="close_dialog"
+            android:visibility="gone"
 
             />
-
 
     </LinearLayout>
 
@@ -48,7 +49,7 @@
         android:orientation="horizontal"
         >
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/dialog_pfimg"
         android:layout_width="0dp"
         android:layout_height="match_parent"
